--- a/src/snail_dot_faith/templates/index.html
+++ b/src/snail_dot_faith/templates/index.html
@@ -1,7 +1,16 @@
 <!-- templates/index.html -->
 {% extends "base.html" %} {% block content %}
-<p>Welcome to Snail Dot Faith!</p>
-<button hx-get="/update" hx-target="#content" hx-swap="outerHTML">
-  Get Update
-</button>
+<div id="bfr-clck">
+  <p id="snail-paragraph">
+    Welcome to the Church of Snail! Begin your journey by generating some snails
+  </p>
+  <button
+    class="bg-red-600 hover:bg-red-700 text-green-500 font-bold p-1 rounded"
+    hx-get="/update"
+    hx-target="#snail-paragraph"
+    hx-swap="outerHTML"
+  >
+    Generate random snail
+  </button>
+</div>
 {% endblock %}
