--- a/src/snail_dot_faith/templates/index.html
+++ b/src/snail_dot_faith/templates/index.html
@@ -8,7 +8,7 @@
     class="bg-red-600 hover:bg-red-700 text-green-500 font-bold p-1 rounded"
     hx-get="/update"
     hx-target="#snail-paragraph"
-    hx-swap="outerHTML"
+    hx-swap="innerHTML"
   >
     Generate random snail
   </button>
