--- a/src/snail_dot_faith/templates/base.html
+++ b/src/snail_dot_faith/templates/base.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gradient-to-r from-purple-600 via-pink-600 to-red-600">
-    <h1 class="text-3xl font-bold text-center mx-auto">{{ heading }}</h1>
+    <h1 class="text-3xl font-bold text-center mx-auto py-10">{{ heading }}</h1>
     <div id="content" class="mx-auto text-center">
       {% block content %}{% endblock %}
     </div>
