--- a/src/snail_dot_faith/templates/dice.html
+++ b/src/snail_dot_faith/templates/dice.html
@@ -1,4 +1,4 @@
 <img
   id="dicegif"
-  src="{{ url_for('static', filename='dice/dice{}.gif'.format(dice_num)) }}"
+  src="{{ url_for('static', filename='dice/dice{}.webp'.format(dice_num)) }}?fix-the-internet-please={{ rand }}"
 />
