Move randomization of dice roll to client

--- a/src/snail_dot_faith/templates/index.html
+++ b/src/snail_dot_faith/templates/index.html
@@ -1,12 +1,19 @@
 {% extends "base.html" %} {% block content %}
+<script>
+  function rollDice() {
+    const rand = Math.floor(Math.random() * 5) + 1;
+    const dicegif = document.getElementById("dicegif");
+    dicegif.src = `/static/dice/dice${rand}.webp?reload=${Date.now()}`;
+  }
+</script>
+
 <button
-  class="bg-slate-700 hover:bg-red-700 text-green-500 text-xl p-3 rounded-xl"
-  hx-get="/update"
-  hx-target="#dicegif"
-  hx-swap="outerHTML"
+  class="p-3 text-xl text-green-500 bg-slate-700 hover:bg-red-700 rounded-xl"
+  onclick="rollDice()"
 >
   🎲
 </button>
+
 <div class="mx-auto w-[256px] h-[256px]">
   <img id="dicegif" src="{{ url_for('static', filename='dice/empty.png') }}" />
 </div>
